--- a/deploy-k8s-eks.yaml
+++ b/deploy-k8s-eks.yaml
@@ -2,8 +2,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  #the Deployment Name
-  name: demo-react-app
+  labels:
+    app: react-app
+  name: react-app
 spec:
   #the Number of Pods
   replicas: 2
@@ -18,14 +19,8 @@ spec:
       # Container Details
       containers:
       - name: react-app
-        # Docker Image
         image: 532806123370.dkr.ecr.us-east-1.amazonaws.com/react-app-ecr-repo
         imagePullPolicy: Always
-#         resources:
-#          #cpu and memory limit
-#           limits:
-#             memory: "550Mi"
-#             cpu: "500m"
         ports:
         #the port on which the app can be reached out inside the container
         - containerPort: 3000
@@ -37,12 +32,8 @@ apiVersion: v1
 kind: Service
 metadata:
    #the Serivce Name- it should match with the lable name of the deployment 
-  name: demo-react-app
+  name: react-app
 spec:
-  #type of the service
-#   type: NodePort
-#   selector:
-#     app: demo-react-app
   ports:
   - name: http
   - port: 80
