--- a/deploy-k8s-eks.yaml
+++ b/deploy-k8s-eks.yaml
@@ -19,7 +19,7 @@ spec:
       # Container Details
       containers:
       - name: react-app
-        image: 532806123370.dkr.ecr.us-east-1.amazonaws.com/new-repo
+        image: 532806123370.dkr.ecr.us-east-1.amazonaws.com/react-app
         imagePullPolicy: Always
         ports:
         #the port on which the app can be reached out inside the container
